Visual corrections for ShiftPlanner view

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,6 +39,16 @@ input[type=text] {
     box-sizing: border-box;
 }
 
+.number-input {
+	width: 40%;
+    color: #333;
+    padding: 5px 10px;
+    margin: 1em;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: white;
+}
+
 input[type=text]:focus {
   box-shadow: 0 0 5px rgba(81, 203, 238, 1);
   border: 1px solid rgba(81, 203, 238, 1);
